Fix the handling of tool tip display if the txt is too long, added word-wrap styling
Reviewer: Tiff Go

Issue: GCP-8793

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -526,6 +526,7 @@ tr.trialInstance {
     padding: 15px;
     text-align: left;
     text-transform: none;
+    word-wrap: break-word;
 }
 .tooltip.right .tooltip-arrow {
     border-right-color: #5A5A5A;
